--- a/[E_15]TransformerChatBot.ipynb
+++ b/[E_15]TransformerChatBot.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.9"
     },
     "colab": {
-      "name": "[E-15]TransformerChatBot (1).ipynb",
+      "name": "[E-15]TransformerChatBot.ipynb",
       "provenance": [],
       "collapsed_sections": []
     }
@@ -864,7 +864,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fifSyIjj7JhQ",
-        "outputId": "6b79c69a-f7ea-4efe-bc7f-07d7ef3f7f9f"
+        "outputId": "6821f3c5-c4b6-4001-f150-f25aa54f741c"
       },
       "source": [
         "corpus_q = []\n",
@@ -877,7 +877,7 @@
         "corpus_q[0:20]"
       ],
       "id": "fifSyIjj7JhQ",
-      "execution_count": 64,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -906,7 +906,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 75
         }
       ]
     },
@@ -917,7 +917,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cVdoQV_v-K2n",
-        "outputId": "0088d86c-129f-4c45-80c1-516cfbb6bd22"
+        "outputId": "dec9739f-bf38-4228-ea28-5102f2499174"
       },
       "source": [
         "corpus_a = []\n",
@@ -930,7 +930,7 @@
         "corpus_a[0:20]"
       ],
       "id": "cVdoQV_v-K2n",
-      "execution_count": 65,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -959,7 +959,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 76
         }
       ]
     },
@@ -1049,15 +1049,254 @@
       "id": "GYKvsBr8-7vN"
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ovBO9Cf7HzUs"
+      },
+      "source": [
+        "Vocabulary 생성!!!"
+      ],
+      "id": "ovBO9Cf7HzUs"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kGeQ-KS1-7R5"
       },
       "source": [
-        ""
+        "import tensorflow_datasets as tfds #Tokenizer 생성\n",
+        "\n",
+        "tokenizer = tfds.deprecated.text.SubwordTextEncoder.build_from_corpus(corpus_q + corpus_a, target_vocab_size=2**13)"
       ],
       "id": "kGeQ-KS1-7R5",
-      "execution_count": null,
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q0Ikn58KHNq0"
+      },
+      "source": [
+        "START_TOKEN, END_TOKEN = [tokenizer.vocab_size], [tokenizer.vocab_size + 1] #시작 종료 토큰 넘버 부여"
+      ],
+      "id": "q0Ikn58KHNq0",
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yH1wjxToHU-U",
+        "outputId": "23b0663c-3d75-4bc1-ba5c-f76fbf0717e8"
+      },
+      "source": [
+        "print('START_TOKEN의 번호 :' ,[tokenizer.vocab_size])\n",
+        "print('END_TOKEN의 번호 :' ,[tokenizer.vocab_size + 1])"
+      ],
+      "id": "yH1wjxToHU-U",
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "START_TOKEN의 번호 : [8171]\n",
+            "END_TOKEN의 번호 : [8172]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bp5W6YH1HXNB",
+        "outputId": "3d1770bc-b8c6-476a-d729-9a2e115052e2"
+      },
+      "source": [
+        "VOCAB_SIZE = tokenizer.vocab_size + 2 #시작 종료 토큰 추가하여 Vocabulary size 설정\n",
+        "print(VOCAB_SIZE)"
+      ],
+      "id": "bp5W6YH1HXNB",
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8173\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qmBT4yMGIHsV"
+      },
+      "source": [
+        "Encoding and Padding !!!"
+      ],
+      "id": "qmBT4yMGIHsV"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6hEmMDVDHqOt",
+        "outputId": "c07d0539-4dc5-43e0-9b12-b04bb846c2ce"
+      },
+      "source": [
+        "# 인코딩해서 단어를 정수로 변환!!!\n",
+        "print('정수 인코딩 후의 21번째 질문 샘플: {}'.format(tokenizer.encode(corpus_q[21])))\n",
+        "print('정수 인코딩 후의 21번째 답변 샘플: {}'.format(tokenizer.encode(corpus_a[21])))"
+      ],
+      "id": "6hEmMDVDHqOt",
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수 인코딩 후의 21번째 질문 샘플: [5760, 610, 2489, 4160]\n",
+            "정수 인코딩 후의 21번째 답변 샘플: [2353, 7511, 7, 6273, 96, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xu5BXYUuIpKN",
+        "outputId": "d1e68992-4a1d-46c5-ffd9-6cfa7139a1c7"
+      },
+      "source": [
+        "# 인코딩 후 최대 길이 지정!!!\n",
+        "MAX_LENGTH = 40\n",
+        "print(MAX_LENGTH)"
+      ],
+      "id": "xu5BXYUuIpKN",
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kGcqxxU0I-sf"
+      },
+      "source": [
+        "# 문장 형식 지정 및 최대 길이로 필터링 및 패딩까지 처리하는 함수\n",
+        "def tokenize_and_filter(inputs, outputs):\n",
+        "  tokenized_inputs, tokenized_outputs = [], []\n",
+        "  \n",
+        "  for (sentence1, sentence2) in zip(inputs, outputs):\n",
+        "    sentence1 = START_TOKEN + tokenizer.encode(sentence1) + END_TOKEN\n",
+        "    sentence2 = START_TOKEN + tokenizer.encode(sentence2) + END_TOKEN\n",
+        "\n",
+        "    if len(sentence1) <= MAX_LENGTH and len(sentence2) <= MAX_LENGTH:\n",
+        "      tokenized_inputs.append(sentence1)\n",
+        "      tokenized_outputs.append(sentence2)\n",
+        "  \n",
+        "  tokenized_inputs = tf.keras.preprocessing.sequence.pad_sequences(\n",
+        "      tokenized_inputs, maxlen=MAX_LENGTH, padding='post')\n",
+        "  tokenized_outputs = tf.keras.preprocessing.sequence.pad_sequences(\n",
+        "      tokenized_outputs, maxlen=MAX_LENGTH, padding='post')\n",
+        "  \n",
+        "  return tokenized_inputs, tokenized_outputs"
+      ],
+      "id": "kGcqxxU0I-sf",
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NOIXKOX7JZU0",
+        "outputId": "87521a99-c961-4947-9a1a-a61dd036286c"
+      },
+      "source": [
+        "# 필터링 함수 적용\n",
+        "questions, answers = tokenize_and_filter(corpus_a, corpus_q)\n",
+        "print('단어장의 크기 :',(VOCAB_SIZE))\n",
+        "print('필터링 후의 질문 샘플 개수: {}'.format(len(questions)))\n",
+        "print('필터링 후의 답변 샘플 개수: {}'.format(len(answers)))"
+      ],
+      "id": "NOIXKOX7JZU0",
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "단어장의 크기 : 8173\n",
+            "필터링 후의 질문 샘플 개수: 11823\n",
+            "필터링 후의 답변 샘플 개수: 11823\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wJTtTni2Jj09"
+      },
+      "source": [
+        "#### 교사 강요(Teacher Forcing) 언어 모델 훈련 기법 (훈련 속도 증강 위해 사용)\n",
+        "- 트랜스포머 모델의 Decoder가 자기 회귀 모델이기 때문에 사용해야 함"
+      ],
+      "id": "wJTtTni2Jj09"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xtAgsiadKFpm"
+      },
+      "source": [
+        "# tf.data.Dataset API 입력으로 질문 답변 쌍을 사용함\n",
+        "# 교사 강요, Decoder의 입력값과 레이블을 규칙에 따라 설정함\n",
+        "\n",
+        "BATCH_SIZE = 64\n",
+        "BUFFER_SIZE = 20000\n",
+        "\n",
+        "dataset = tf.data.Dataset.from_tensor_slices((\n",
+        "    {\n",
+        "        'inputs': questions,\n",
+        "        'dec_inputs': answers[:, :-1]\n",
+        "    },\n",
+        "    {\n",
+        "        'outputs': answers[:, 1:]\n",
+        "    },\n",
+        "))\n",
+        "\n",
+        "dataset = dataset.cache()\n",
+        "dataset = dataset.shuffle(BUFFER_SIZE)\n",
+        "dataset = dataset.batch(BATCH_SIZE)\n",
+        "dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)"
+      ],
+      "id": "xtAgsiadKFpm",
+      "execution_count": 88,
       "outputs": []
     },
     {
