--- a/[E_15]TransformerChatBot.ipynb
+++ b/[E_15]TransformerChatBot.ipynb
@@ -51,7 +51,7 @@
         "import pandas as pd"
       ],
       "id": "massive-poison",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
         "drive.mount('/content/drive')"
       ],
       "id": "Zm-JpNow4DNl",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
         "path_to_dataset = '/content/drive/MyDrive/Colab Notebooks/E-15/ChatbotData .csv'"
       ],
       "id": "subjective-fifty",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
         "df = pd.read_csv(path_to_dataset, sep=\",\")"
       ],
       "id": "retired-official",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "df"
       ],
       "id": "ancient-albany",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
         "sd1 = df['Q']"
       ],
       "id": "tribal-hanging",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
         "sd1"
       ],
       "id": "apart-monitoring",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
         "sd1_df"
       ],
       "id": "accompanied-hurricane",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -454,7 +454,7 @@
         "sd2 = df['A']"
       ],
       "id": "alike-flour",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -470,7 +470,7 @@
         "sd2"
       ],
       "id": "wicked-tradition",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +510,7 @@
         "sd2_df"
       ],
       "id": "exterior-afghanistan",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -638,7 +638,7 @@
         "sd1_df.to_csv('questions.txt', index=False, header=None)"
       ],
       "id": "olive-dynamics",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -650,7 +650,7 @@
         "sd2_df.to_csv('answers.txt', index=False, header=None)"
       ],
       "id": "frequent-glasgow",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -667,7 +667,7 @@
         "print(path_to_questions)"
       ],
       "id": "viral-cholesterol",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +692,7 @@
         "print(path_to_answers)"
       ],
       "id": "rq5GvOr14-d4",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,7 +737,7 @@
         "txt_list2 = glob.glob(path_to_answers)"
       ],
       "id": "peQGo-mW6aQ3",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -761,7 +761,7 @@
         "print(\"Examples:\\n\", raw_corpus_q[:3])"
       ],
       "id": "nLWJLqkW5oNq",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,7 +795,7 @@
         "print(\"Examples:\\n\", raw_corpus_a[:3])"
       ],
       "id": "j0xNtSwR-C9z",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,8 +818,8 @@
         "# 토크나이징에 방해되지 않기 위해\n",
         "def preprocess_sentence(review):\n",
         "  \n",
-        "  review = re.compile('[ ㄱ-ㅎㅏ-ㅣa-zA-Z ]+').sub(' ', review)\n",
-        "  review = re.sub(r'([\\n @ = / |])', ' ', review)\n",
+        "  review = re.compile('[ ㄱ-ㅎㅏ-ㅣa-zA-Z ]+').sub(' ', review) # 의미없는 글자 처리\n",
+        "  review = re.sub(r'([\\n @ = / |])', ' ', review) # 특수문자 처리\n",
         "  review = review.lower() #lower case \n",
         "  review = re.sub(r'\\s+', ' ', review) #remove extra space \n",
         "  review = re.sub(r'<[^>]+>','',review) #remove Html tags \n",
@@ -832,7 +832,7 @@
         "  return review"
       ],
       "id": "material-alcohol",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -848,7 +848,7 @@
         "print(preprocess_sentence(\"ㄱㄱㄶㄱㅐ안녕.,ㅣㅣ@ zzzzㅋㅋㅋㄱAEGㄱㄱㄱㄲㄸㄱㄱㄱㄱㄱㄱ라ㄱㄱㄱㄱㄱㅇㅏㅏㅏㅣㅣㅑㅕㄱㄴㄷ.\"))"
       ],
       "id": "Z0Ajge0n70sB",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,7 +879,7 @@
         "corpus_q[0:20]"
       ],
       "id": "mVa48bHNwsjx",
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +932,7 @@
         "corpus_a[0:20]"
       ],
       "id": "qGR--kJruUI8",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -979,7 +979,7 @@
         "print('전체 샘플 수 :', len(corpus_a))"
       ],
       "id": "CfeFxF3j9kuB",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1005,7 +1005,7 @@
         "print('전처리 후의 22번째 답변 샘플: {}'.format(corpus_a[21]))"
       ],
       "id": "1i30Fyh6-ujX",
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,7 +1071,7 @@
         "tokenizer = tfds.deprecated.text.SubwordTextEncoder.build_from_corpus(corpus_q + corpus_a, target_vocab_size=2**13)"
       ],
       "id": "kGeQ-KS1-7R5",
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1083,7 +1083,7 @@
         "START_TOKEN, END_TOKEN = [tokenizer.vocab_size], [tokenizer.vocab_size + 1] #시작 종료 토큰 넘버 부여"
       ],
       "id": "q0Ikn58KHNq0",
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1100,7 +1100,7 @@
         "print('END_TOKEN의 번호 :' ,[tokenizer.vocab_size + 1])"
       ],
       "id": "yH1wjxToHU-U",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,7 +1126,7 @@
         "print(VOCAB_SIZE)"
       ],
       "id": "bp5W6YH1HXNB",
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1162,7 +1162,7 @@
         "print('정수 인코딩 후의 21번째 답변 샘플: {}'.format(tokenizer.encode(corpus_a[21])))"
       ],
       "id": "6hEmMDVDHqOt",
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,7 +1189,7 @@
         "print(MAX_LENGTH)"
       ],
       "id": "xu5BXYUuIpKN",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1226,7 +1226,7 @@
         "  return tokenized_inputs, tokenized_outputs"
       ],
       "id": "kGcqxxU0I-sf",
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1246,7 +1246,7 @@
         "print('필터링 후의 답변 샘플 개수: {}'.format(len(answers)))"
       ],
       "id": "NOIXKOX7JZU0",
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1298,8 +1298,21 @@
         "dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)"
       ],
       "id": "xtAgsiadKFpm",
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RwbK-wyi3EWy"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "id": "RwbK-wyi3EWy"
     },
     {
       "cell_type": "markdown",
@@ -1373,7 +1386,7 @@
         "  return tf.keras.Model(inputs=[inputs, dec_inputs], outputs=outputs, name=name)"
       ],
       "id": "q0mrX7bwOD2J",
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1418,7 +1431,7 @@
         "model.summary()"
       ],
       "id": "baebg3f9OfBy",
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1437,12 +1450,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "romantic-healing"
+        "id": "oBl6ekgI3B9B"
       },
       "source": [
-        "# 5. 모델 평가"
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
-      "id": "romantic-healing"
+      "id": "oBl6ekgI3B9B"
     },
     {
       "cell_type": "markdown",
