--- a/[E-17]RNNBERTModel.ipynb
+++ b/[E-17]RNNBERTModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ethical-surgeon",
+   "id": "incorporated-assignment",
    "metadata": {},
    "source": [
     "# BERT Pretrained Model 활용"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separate-pierce",
+   "id": "prospective-flood",
    "metadata": {},
    "source": [
     "# 0. 프로젝트 준비 - KorQuAD 데이터셋 준비"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sophisticated-administrator",
+   "id": "green-december",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "postal-gauge",
+   "id": "compatible-bikini",
    "metadata": {},
    "source": [
     "- KorQuAD 데이터 확인"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "elegant-technology",
+   "id": "aerial-unemployment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eight-withdrawal",
+   "id": "static-evidence",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "canadian-return",
+   "id": "related-priest",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "phantom-anger",
+   "id": "maritime-differential",
    "metadata": {},
    "source": [
     "- 전처리"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "headed-strip",
+   "id": "racial-shirt",
    "metadata": {},
    "source": [
     "- (1) 띄어쓰기 단위 정보관리"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "stupid-bearing",
+   "id": "fluid-material",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "binary-optics",
+   "id": "optional-envelope",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perfect-alloy",
+   "id": "alike-meeting",
    "metadata": {},
    "source": [
     "- 문장의 영역표시 함수 만들기"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "enabling-buffalo",
+   "id": "hourly-universal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "static-actor",
+   "id": "aquatic-ownership",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "revolutionary-split",
+   "id": "shared-administrator",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "personalized-college",
+   "id": "running-environment",
    "metadata": {},
    "source": [
     "- (2) 토큰화"
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stretch-transaction",
+   "id": "moderate-challenge",
    "metadata": {},
    "source": [
     "Subword Segmentation"
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exceptional-intranet",
+   "id": "analyzed-compatibility",
    "metadata": {},
    "source": [
     " Google Open Source SentencePiece 모델로 Subword 기반 전처리"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "serial-prerequisite",
+   "id": "infinite-cartridge",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "extensive-senator",
+   "id": "better-encoding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "addressed-classroom",
+   "id": "sealed-israel",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceramic-baltimore",
+   "id": "agricultural-death",
    "metadata": {},
    "source": [
     "- (3) Improve Span"
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geographic-sapphire",
+   "id": "organized-inside",
    "metadata": {},
    "source": [
     "KorQuAD 데이터셋에서 question, context, answer 뽑아내기"
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "surrounded-sense",
+   "id": "dependent-force",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "seeing-kazakhstan",
+   "id": "every-generation",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "infectious-corpus",
+   "id": "unknown-yorkshire",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "suburban-twist",
+   "id": "advance-daniel",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "remarkable-cookbook",
+   "id": "impaired-electric",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "changing-today",
+   "id": "tribal-vocabulary",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "occupational-scottish",
+   "id": "internal-listening",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "friendly-return",
+   "id": "norwegian-office",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "revised-youth",
+   "id": "signed-perfume",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-mumbai",
+   "id": "liquid-dollar",
    "metadata": {},
    "source": [
     "- (4) 데이터셋 분리"
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "expressed-integration",
+   "id": "enormous-lender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "narrow-joint",
+   "id": "electrical-constitutional",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "connected-alert",
+   "id": "cutting-composer",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unavailable-dealing",
+   "id": "copyrighted-portuguese",
    "metadata": {},
    "source": [
     "- (5) 데이터 분석 : Question"
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "paperback-rehabilitation",
+   "id": "geographic-exhibit",
    "metadata": {},
    "source": [
     "question 항목의 길이 분포를 조사"
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "palestinian-charles",
+   "id": "adequate-confusion",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "distinguished-shoulder",
+   "id": "curious-prisoner",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "wooden-election",
+   "id": "fatal-remedy",
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "european-employee",
+   "id": "parental-charity",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "special-speaker",
+   "id": "liked-winter",
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unnecessary-dividend",
+   "id": "athletic-scale",
    "metadata": {},
    "source": [
     "- (6) 데이터 분석 : Context"
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "enormous-chess",
+   "id": "defensive-smell",
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "unique-murray",
+   "id": "partial-macedonia",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "systematic-orleans",
+   "id": "preliminary-regression",
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "contained-nature",
+   "id": "beginning-visibility",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cosmetic-cradle",
+   "id": "large-shore",
    "metadata": {},
    "source": [
     "- (7) 데이터 분석 : Answer"
@@ -1185,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "previous-language",
+   "id": "phantom-plasma",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "sapphire-sugar",
+   "id": "blank-aurora",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "protective-transaction",
+   "id": "little-ordinary",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "yellow-ethiopia",
+   "id": "tight-thing",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "final-relative",
+   "id": "ethical-forwarding",
    "metadata": {},
    "source": [
     "- (8) 데이터 분석 : Word Cloud"
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "encouraging-yeast",
+   "id": "fitting-details",
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "aggregate-location",
+   "id": "material-friend",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "subject-violence",
+   "id": "wrapped-connecticut",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "early-telescope",
+   "id": "pediatric-gather",
    "metadata": {},
    "source": [
     "- (9) 데이터 로드"
@@ -1447,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "closed-collector",
+   "id": "fewer-century",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "random-discrimination",
+   "id": "prostate-opera",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "electronic-concentration",
+   "id": "interracial-monaco",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,7 +1537,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "passive-identifier",
+   "id": "lesser-diversity",
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-speaking",
+   "id": "crazy-debut",
    "metadata": {},
    "source": [
     "# ------------------> 데이터 준비, 전처리 완료"
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "effective-thompson",
+   "id": "conservative-opposition",
    "metadata": {},
    "source": [
     "----------------------------------------"
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "western-transmission",
+   "id": "aggregate-witness",
    "metadata": {},
    "source": [
     "# STEP 1. pretrained model 로딩하기"
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seasonal-fireplace",
+   "id": "unauthorized-decade",
    "metadata": {},
    "source": [
     "### BERT Model 구성을 위한 레이어 생성"
@@ -1669,7 +1669,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "worldwide-eight",
+   "id": "married-ballet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "recreational-chemical",
+   "id": "artistic-chrome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1823,7 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "round-tragedy",
+   "id": "combined-custom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +1855,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "posted-tracker",
+   "id": "systematic-albuquerque",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "monthly-giving",
+   "id": "sharing-importance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "dental-muscle",
+   "id": "enhanced-castle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1980,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "associate-interstate",
+   "id": "institutional-report",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charitable-exemption",
+   "id": "dependent-rhythm",
    "metadata": {},
    "source": [
     "### BERT Model 구성"
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "sized-millennium",
+   "id": "adult-coast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grateful-parker",
+   "id": "amber-snapshot",
    "metadata": {},
    "source": [
     "# ------------------------------------------------------------------------------"
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moral-operator",
+   "id": "final-omega",
    "metadata": {},
    "source": [
     "# Pretrained Model 사용하지 않은 BERT Model 테스트"
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "junior-farming",
+   "id": "coordinated-advocate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2137,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "instructional-circulation",
+   "id": "comprehensive-dietary",
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "heavy-exhibition",
+   "id": "creative-advantage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "incomplete-hunger",
+   "id": "textile-occurrence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,7 +2192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "french-microphone",
+   "id": "vulnerable-canal",
    "metadata": {},
    "source": [
     "### 학습 진행"
@@ -2201,7 +2201,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "aggressive-vault",
+   "id": "entire-synthesis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2239,7 +2239,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "defensive-indonesia",
+   "id": "center-willow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,7 +2269,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "personal-istanbul",
+   "id": "incorporate-cylinder",
    "metadata": {},
    "outputs": [
     {
@@ -2333,7 +2333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innovative-staff",
+   "id": "painful-round",
    "metadata": {},
    "source": [
     "# -------------------------------------------------------------------------------"
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impaired-portland",
+   "id": "diagnostic-doctor",
    "metadata": {},
    "source": [
     "# Pretrained BERT Model load"
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "exotic-system",
+   "id": "nutritional-walker",
    "metadata": {},
    "outputs": [
     {
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eligible-acquisition",
+   "id": "completed-intent",
    "metadata": {},
    "source": [
     "# STEP 2. pretrained model finetune 하기"
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excellent-hazard",
+   "id": "upper-brand",
    "metadata": {},
    "source": [
     "### KorQuAD용으로 finetune하기 위한 모델 클래스"
@@ -2410,7 +2410,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "authentic-tiger",
+   "id": "induced-winning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2438,7 +2438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bottom-brook",
+   "id": "identical-boxing",
    "metadata": {},
    "source": [
     "### 모델 사이즈 조정"
@@ -2447,7 +2447,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "elder-payday",
+   "id": "historical-nicholas",
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2480,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "filled-lotus",
+   "id": "printable-differential",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "saving-delivery",
+   "id": "serious-finding",
    "metadata": {},
    "source": [
     "# STEP 3. Inference 수행하기"
@@ -2501,7 +2501,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "certified-accent",
+   "id": "amateur-virgin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2530,7 +2530,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "indoor-constraint",
+   "id": "plain-incentive",
    "metadata": {},
    "outputs": [
     {
@@ -2610,7 +2610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "radio-section",
+   "id": "composed-makeup",
    "metadata": {},
    "source": [
     "### ==> Inference 결과와 원래 정답 비교 : 원래 정답과 비교하여 장문으로 답을 제시하고 있으나, 정답에 있는 단어를 정확하게 포함하고 있다."
@@ -2618,19 +2618,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accompanied-boston",
+   "id": "dangerous-desktop",
    "metadata": {},
    "source": [
     "# STEP 4. 학습 경과 시각화 비교분석"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "organizational-night",
+   "cell_type": "markdown",
+   "id": "transparent-profit",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# [회고]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "official-civilian",
+   "metadata": {},
+   "source": [
+    "- RNN 노드를 여러 개 경험하다보니 자연어처리는 데이터 전처리와 모델 학습에 기본적으로 많은 시간이 필요하다는 것을 알게 되었다.\n",
+    "- 이번 노드에서도 BERT Model 학습에 1달 가량의 시간이 소요되는 관계로, 미리 학습된 BERT Model을 활용하여 정답을 예측하는 형식으로 경험하게 되었다.\n",
+    "- 또한, 구성해야 할 코드 블럭들이 많은데, 노드에 미리 구성된 코드 없이는 구현에 많은 시간이 걸릴 것으로 보인다.\n",
+    "- OOM 에러가 나서 난감했으나 커널 초기화 후 재진입하니 해결되었다."
+   ]
   }
  ],
  "metadata": {
